@@ -1,6 +1,6 @@
 /* c-ctype.h: ASCII-safe versions of the <ctype.h> macros.
 
-   Copyright 1992, 1994, 2008, 2010 Karl Berry.
+   Copyright 1992, 1994, 2008, 2010, 2011 Karl Berry.
    Copyright 1998, 2000, 2005 Olaf Weber.
 
    This library is free software; you can redistribute it and/or
@@ -22,8 +22,10 @@
 #include <ctype.h>
 
 /* Be sure we have `isascii', even if wrong.  */
+#ifndef WIN32
 #ifndef isascii
 #define isascii(c) 1
+#endif
 #endif
 
 #define ISALNUM(c) (isascii (c) && isalnum(c))
