@@ -87,7 +87,7 @@ extern KPSEDLL string *kpathsea_all_path_search
 /* Search for any of the NAMES in PATH, and allow specifying both
    MUST_EXIST and ALL.  */
 extern KPSEDLL string *kpathsea_path_search_list_generic (kpathsea kpse,
-      const_string path, const_string* names, boolean must_exist, boolean all);
+   const_string path, const_string* names, boolean must_exist, boolean all);
 
 /* Search for any of NAMES, with MUST_EXIST and ALL true.  */
 extern KPSEDLL string *kpathsea_all_path_search_list
